--- a/src/views/sobre.html
+++ b/src/views/sobre.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Evitar ataques de injeção de código malicioso -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'">
     <title>Mini dev Editor</title>
+    <link rel="stylesheet" href="../public/css/style.css">
 </head>
 <body>
+    <section id="sobre">
     <h1>Mini Dev Editor</h1>
     <p>Melo</p>
+    <button onclick="fechar()">OK</button>
+    </section>
+    <!-- Processo de renderização-->
+    <script src="render.js"></script>
 </body>
 </html>
