--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,7 +15,8 @@
 
     </div>
     <!--Editor-->
-    <textarea id="txtArea"></textarea>
+    <textarea id="txtArea" spellcheck="false"></textarea> 
+    <!-- Spellcheck = "false" desativa a verificação ortografica-->
     <!-- Processo de renderização-->
     <script src="render.js"></script>
 </body>
